<resources>
    <string name="app_name">AppGrupal</string>
    <string name="preferences">com.example.appgrupal.PREFERENCE_KEY</string>
    <string name="default_web_client_id2">450015175982-j9mope9ivi8keqiq2rri8suik5r6tbmk.apps.googleusercontent.com</string>

    <string name="hola_de_javi">hola de javi</string>
    <string name="hola_de_angelito">hola de angelito</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Menu-->

    <string name="menu_home">Inicio</string>
    <string name="menu_PedirCita">Pedir Cita</string>
    <string name="menu_MisCitas">Mis Citas</string>

    <string name="menu_informes">Informes</string>
    <string name="menu_profesional">Profesional</string>
    <string name="menu_chat">Chat</string>

    <string name="menu_videollamada">Videollamada</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_eventos">Eventos</string>


</resources>