<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_PedirCita"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_PedirCita" />
        <item
            android:id="@+id/nav_MisCitas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_MisCitas" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_informes"
            android:title="@string/menu_informes"/>
        <item
            android:id="@+id/nav_profesional"
            android:title="@string/menu_profesional"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_chat"/>
        <item
            android:id="@+id/nav_videollamda"
            android:title="@string/menu_videollamada"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tareas"
            android:title="@string/menu_tareas"/>
        <item
            android:id="@+id/nav_eventos"
            android:title="@string/menu_eventos"/>
    </group>
</menu>